# gameserver

./: CMakeLists.txt
src/: client.cpp  definitions.h  main.cpp  server.cpp
