CMAKE_MINIMUM_REQUIRED(VERSION 3.2)
PROJECT(gameio)

FIND_PACKAGE(Boost REQUIRED COMPONENTS system)
FIND_PACKAGE(Boost REQUIRED COMPONENTS thread)
FIND_PACKAGE(Threads)

INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIR})

set(CMAKE_CXX_STANDARD 11)

#ADD_EXECUTABLE(gameserver src/main.cpp)
#TARGET_LINK_LIBRARIES(gameserver ${Boost_SYSTEM_LIBRARY})

ADD_EXECUTABLE(gameserver src/server.cpp)
TARGET_LINK_LIBRARIES(gameserver ${Boost_SYSTEM_LIBRARY})
TARGET_LINK_LIBRARIES(gameserver ${CMAKE_THREAD_LIBS_INIT})

ADD_EXECUTABLE(gameclient src/client.cpp)
TARGET_LINK_LIBRARIES(gameclient ${Boost_SYSTEM_LIBRARY})
TARGET_LINK_LIBRARIES(gameclient ${CMAKE_THREAD_LIBS_INIT})
